--- a/TCMC_14_Milestone_2/styles/mainstyles.css
+++ b/TCMC_14_Milestone_2/styles/mainstyles.css
@@ -3,37 +3,36 @@
 
 body {
 	background-color: #C8BD99;
-	background-image: url(images/webpagebackground-3.jpg);
+	background-image: url(../images/webpagebackground-3.jpg);
 	background-repeat: repeat;
 	margin: 0px;
 	padding: 0px;
 }
 
 body h1, p {
-	padding:5px;
+	padding: 5px;
 	text-justify: auto;
 }
 
 h1 {
-	font-family:Verdana, Geneva, sans-serif;
+	font-family: Verdana, Geneva, sans-serif;
 }
 
 #container {
-	width:1000px;
+	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 #header {
-	background-color:#D7CCAC;
-	height:151px;
-	width:1000px;
+	background-color: #D7CCAC;
+	height: 151px;
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
 #navigation { 
-	background-color:#f8ecd5;
+	background-color: #f8ecd5;
 	text-align: center;
 	margin-bottom: 10px;
 }
@@ -48,7 +47,7 @@ h1 {
 	display: inline;
 }
 
-#navigation ul li a{
+#navigation ul li a {
 	height: 20px;
 	margin: 0px;
 	padding: 2px 10px 2px 10px;
@@ -60,16 +59,20 @@ h1 {
 	color: #000;
 }
 
-#navigation ul li a:hover{
+#navigation ul li a:hover {
 	color: #FFF;
 	background-color: #e0d4bd;
 }
 
+#navigation ul li a.activePage {
+	background-color: #FC0;
+}
+
 #contentContainer {
-	width:680px;
-	background-color:#e0d4bd;
-	margin-left:10px;
-	margin-right:10px;
+	width: 680px;
+	background-color: #e0d4bd;
+	margin-left: 10px;
+	margin-right: 10px;
 	margin-bottom: 10px;
 	float: left;
 }
@@ -79,29 +82,52 @@ h1 {
 	background-color: #9B815E;
 }
 
-.logoCentred {
+.footerContentContainerLeft {
+	float: left;
+}
+
+.footerContentContainerRight {
+	float: right;
+	margin-top: 10px;
+	margin-right: 10px;
+}
+
+.alignedCentre {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.logoLeft {
-	display: block;
+/*.alignedLeft {
 	float: left;
 }
 
-.logoRight {
+.alignedRight {
+	float: right;
+}*/
+
+.floatClear {
+	clear: both;
 }
 
-.imageContainer {
-}
+/*.imageContainer {
+	display: inline-block;
+}*/
 
 .sidebar {
 	height: auto;
-	width:150px;
+	width: 150px;
 	float: left;
-	background-color:#B8A489;
+	background-color: #B8A489;
 	margin-bottom: 10px;
+}
+
+#adminContentContainer {
+	width: 840px;
+	background-color: #e0d4bd;
+	margin-left: 10px;
+	margin-bottom: 10px;
+	float: left;
 }
 	
 /*aside {
