More Fixes, Database functionality improvements
Changed 'Community Notices' to 'Bulletin Board', changed 'Musos' to
'Musicians', changed colour on welcome box on home, added featured
artist and event boxes on home, merged the 2 'About Us' pages together,
worked on database functionality, fixed permissions bug on /~tcmc14/
folder causing some pages to not work, fixed 'Sign In' button on home
page escaping header in Google Chrome.

--- a/TCMC_14_Milestone_2/styles/mainstyles.css
+++ b/TCMC_14_Milestone_2/styles/mainstyles.css
@@ -114,6 +114,16 @@ body h1, p {
 	padding-right: 5px;
 }
 
+#featuredArtist {
+	background-color: #F8F4EF;
+	border-thickness: thin;
+	border-radius: 0.25em;
+	height: 302.5px;
+	width: 302.5px;
+	margin: 5px;
+	padding: 5px;
+}
+
 #featuredEventContainer {
 	background-color: #C6C;
 	width: 322.5px;
@@ -127,6 +137,16 @@ body h1, p {
 #featuredEventContainer p {
 	padding-left: 5px;
 	padding-right: 5px;
+}
+
+#featuredEvent {
+	background-color: #F8F4EF;
+	border-thickness: thin;
+	border-radius: 0.25em;
+	height: 302.5px;
+	width: 302.5px;
+	margin: 5px;
+	padding: 5px;
 }
 
 #socialMediaContainer {
@@ -256,7 +276,7 @@ body h1, p {
 }
 
 .headerAlignedRight {
-	margin-left: 258px;
+	margin-left: 257px;
 }
 
 /*.alignedLeft {
